--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 这个博客第一次创建在2023年6月29日，当时的目的是在秋招的时候能够有一个地方展示自己的内容，实际上，以那时那种一知半解的经验、阅历和心态，并不能写出像样的东西，那次秋招现在想来也不可能成功。不过也有像Processing Raw Images in MATLAB这样有一点内容的东西，但更多是被我用Draft雪藏的文章。">
 <meta name="author" content="">
 <link rel="canonical" href="https://jackchou00.icu/about/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.0892194b4fd670a8b13f9746ee2f6f64ddfbadd6886df66df8f3350cb696961f.css" integrity="sha256-CJIZS0/WcKixP5dG7i9vZN37rdaIbfZt&#43;PM1DLaWlh8=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.a8005cb0a3d1a333597596dfb45873e151302f22c371740f153f9a66d1a2cc7f.css" integrity="sha256-qABcsKPRozNZdZbftFhz4VEwLyLDcXQPFT&#43;aZtGizH8=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://jackchou00.icu/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://jackchou00.icu/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://jackchou00.icu/favicon-32x32.png">
@@ -84,7 +84,7 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
 <meta property="og:url" content="https://jackchou00.icu/about/">
   <meta property="og:site_name" content="🏡JacksBlog">
   <meta property="og:title" content="About">
