--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 这个博客第一次创建在2023年6月29日，当时的目的是在秋招的时候能够有一个地方展示自己的内容，实际上，以那时那种一知半解的经验、阅历和心态，并不能写出像样的东西，那次秋招现在想来也不可能成功。不过也有像Processing Raw Images in MATLAB这样有一点内容的东西，但更多是被我用Draft雪藏的文章。">
 <meta name="author" content="">
 <link rel="canonical" href="https://jackchou00.icu/about/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.c09ccfc450ec03b911b4f870ac4d90d69430ee38b0d83cf727f2f0c84a1c2c10.css" integrity="sha256-wJzPxFDsA7kRtPhwrE2Q1pQw7jiw2Dz3J/LwyEocLBA=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.bc78ebbd48dd3b5e60a65458727cd12884aa2245762adff277c56fd47e678906.css" integrity="sha256-vHjrvUjdO15gplRYcnzRKISqIkV2Kt/yd8Vv1H5niQY=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://jackchou00.icu/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://jackchou00.icu/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://jackchou00.icu/favicon-32x32.png">
@@ -222,7 +222,7 @@
 <p>我目前是色彩科学领域的研究生，关于我和我们的工作，请参阅<a href="http://cel.zju.edu.cn/2024/0923/c27449a2965767/page.htm">我的个人页面</a>和<a href="http://cel.zju.edu.cn">实验室网站</a>。</p>
 <p>爱好有很多，主要是摄影、猫和咖啡。</p>
 <h2 id="关于这里">关于这里<a hidden class="anchor" aria-hidden="true" href="#关于这里">#</a></h2>
-<p>这个博客第一次创建在<a href="/posts/old/Helloworld/">2023年6月29日</a>，当时的目的是在秋招的时候能够有一个地方展示自己的内容，实际上，以那时那种一知半解的经验、阅历和心态，并不能写出像样的东西，那次秋招现在想来也不可能成功。不过也有像<a href="/posts/old/processingrawinmatlab/">Processing Raw Images in MATLAB</a>这样有一点内容的东西，但更多是被我用Draft雪藏的文章。</p>
+<p>这个博客第一次创建在<a href="/posts/old/helloworld/">2023年6月29日</a>，当时的目的是在秋招的时候能够有一个地方展示自己的内容，实际上，以那时那种一知半解的经验、阅历和心态，并不能写出像样的东西，那次秋招现在想来也不可能成功。不过也有像<a href="/posts/old/processingrawinmatlab/">Processing Raw Images in MATLAB</a>这样有一点内容的东西，但更多是被我用Draft雪藏的文章。</p>
 <p>后来，一个非常幸运的机会结束了那次诡异的秋招，也不再有什么动力和目标去更新这个博客，而是偶尔用在一些奇怪的用途。比如，它被用来给巴黎住Airbnb遇到的法国夫妻分享<a href="/posts/old/postcards01/">明信片故事</a>。</p>
 <p>这是上一次建设博客的故事，之前的部分内容还能够在<a href="/posts/old/">古迹 🌃</a>中找到。</p>
 <p>由于是一个部署在Github上的静态网站，我在GitHub上的其他pages也会拥有相同的域名,这样，访客如果不输入后面的内容，直接访问这个域名，就会看到混乱的，很久没有更新的博客。</p>
