--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://jackchou00.icu/flowers/" title="小记 🌼">
-                    <span>小记 🌼</span>
+                <a href="https://jackchou00.icu/flowers/" title="杂记 🌼">
+                    <span>杂记 🌼</span>
                 </a>
             </li>
             <li>
@@ -172,7 +172,7 @@
         <p>这里是一个分享生活、思考和技术文章的地方。</p>
 <ul>
 <li>你可能会发现关于摄影、色彩科学和更多内容。</li>
-<li>🌼 <a href="/flowers/">小记</a>: 生活记录和照片与简短文字。</li>
+<li>🌼 <a href="/flowers/">杂记</a>: 生活记录和照片与简短文字。</li>
 <li>🌳 <a href="/posts/">文章</a>: 完整一些的技术文章和笔记。</li>
 <li>😼 <a href="/about/">关于</a>: 关于我以及这个博客。</li>
 <li>🥳 <a href="https://jackchou00.icu/">jackchou00.icu</a> 喜欢您来！</li>
