--- a/flowers/250122/index.html
+++ b/flowers/250122/index.html
@@ -107,7 +107,7 @@
     {
       "@type": "ListItem",
       "position":  1 ,
-      "name": "小记 🌼",
+      "name": "杂记 🌼",
       "item": "https://jackchou00.icu/flowers/"
     }, 
     {
@@ -191,8 +191,8 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://jackchou00.icu/flowers/" title="小记 🌼">
-                    <span>小记 🌼</span>
+                <a href="https://jackchou00.icu/flowers/" title="杂记 🌼">
+                    <span>杂记 🌼</span>
                 </a>
             </li>
             <li>
