update items. Jackchou00/jacksblog@3f6383bb0aed6e993119d933989ff16a2fd0fbf7

--- a/flowers/250122/index.html
+++ b/flowers/250122/index.html
@@ -191,8 +191,8 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://jackchou00.icu/flowers/" title="杂记 🌼">
-                    <span>杂记 🌼</span>
+                <a href="https://jackchou00.icu/flowers/" title="🌼">
+                    <span>🌼</span>
                 </a>
             </li>
             <li>
