--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title>🏡JacksBlog</title>
 
-<meta name="description" content="">
+<meta name="description" content="JackChou的博客，色彩科学，摄影，技术分享">
 <meta name="author" content="">
 <link rel="canonical" href="https://jackchou00.icu/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.e8837ce64944702606369ded1d43934e0fd20de57cd2c4db27374b5bac45e207.css" integrity="sha256-6IN85klEcCYGNp3tHUOTTg/SDeV80sTbJzdLW6xF4gc=" rel="preload stylesheet" as="style">
@@ -84,11 +84,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet"><meta property="og:url" content="https://jackchou00.icu/">
   <meta property="og:site_name" content="🏡JacksBlog">
   <meta property="og:title" content="🏡JacksBlog">
+  <meta property="og:description" content="JackChou的博客，色彩科学，摄影，技术分享">
   <meta property="og:locale" content="zh-CN">
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="🏡JacksBlog">
-<meta name="twitter:description" content="">
+<meta name="twitter:description" content="JackChou的博客，色彩科学，摄影，技术分享">
 
 <script type="application/ld+json">
 {
@@ -96,7 +97,7 @@
   "@type": "Organization",
   "name": "🏡JacksBlog",
   "url": "https://jackchou00.icu/",
-  "description": "",
+  "description": "JackChou的博客，色彩科学，摄影，技术分享",
   "logo": "https://jackchou00.icu/favicon.ico",
   "sameAs": [
       "https://github.com/Jackchou00", "mailto:jackchou00@zju.edu.cn"
@@ -146,8 +147,8 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://jackchou00.icu/flowers/" title="杂记 🌼">
-                    <span>杂记 🌼</span>
+                <a href="https://jackchou00.icu/flowers/" title="🌼">
+                    <span>🌼</span>
                 </a>
             </li>
             <li>
@@ -172,9 +173,6 @@
         <p>这里是一个分享生活、思考和技术文章的地方。</p>
 <ul>
 <li>你可能会发现关于摄影、色彩科学和更多内容。</li>
-<li>🌼 <a href="/flowers/">杂记</a>: 生活记录和照片与简短文字。</li>
-<li>🌳 <a href="/posts/">文章</a>: 完整一些的技术文章和笔记。</li>
-<li>😼 <a href="/about/">关于</a>: 关于我以及这个博客。</li>
 <li>🥳 <a href="https://jackchou00.icu/">jackchou00.icu</a> 喜欢您来！</li>
 </ul>
     </div>
