--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="auto">
+<html lang="中文" dir="auto">
 
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
 <meta name="robots" content="index, follow">
 <title>404 Page not found | 🏡JacksBlog</title>
 <meta name="keywords" content="">
-<meta name="description" content="JackChou的博客，色彩科学，摄影，技术分享">
+<meta name="description" content="JackChou 的博客，色彩科学，摄影，技术分享">
 <meta name="author" content="">
 <link rel="canonical" href="https://jackchou00.icu/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.e8837ce64944702606369ded1d43934e0fd20de57cd2c4db27374b5bac45e207.css" integrity="sha256-6IN85klEcCYGNp3tHUOTTg/SDeV80sTbJzdLW6xF4gc=" rel="preload stylesheet" as="style">
@@ -18,7 +18,8 @@
 <link rel="mask-icon" href="https://jackchou00.icu/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="https://jackchou00.icu/404.html">
+<link rel="alternate" hreflang="中文" href="https://jackchou00.icu/404.html">
+<link rel="alternate" hreflang="en" href="https://jackchou00.icu/en/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -82,12 +83,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet"><meta property="og:url" content="https://jackchou00.icu/404.html">
   <meta property="og:site_name" content="🏡JacksBlog">
   <meta property="og:title" content="404 Page not found">
-  <meta property="og:description" content="JackChou的博客，色彩科学，摄影，技术分享">
-  <meta property="og:locale" content="zh-CN">
+  <meta property="og:description" content="JackChou 的博客，色彩科学，摄影，技术分享">
+  <meta property="og:locale" content="中文">
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="404 Page not found">
-<meta name="twitter:description" content="JackChou的博客，色彩科学，摄影，技术分享">
+<meta name="twitter:description" content="JackChou 的博客，色彩科学，摄影，技术分享">
 
 </head>
 
@@ -128,6 +129,12 @@
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
+                <ul class="lang-switch"><li>|</li>
+                    <li>
+                        <a href="https://jackchou00.icu/en/" title="English"
+                            aria-label="English">En</a>
+                    </li>
+                </ul>
             </div>
         </div>
         <ul id="menu">
