更新配置文件，修正语言设置并新增照片页面 Jackchou00/jacksblog@725718003834f848853e4c0dc8835038536bb33f

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="中文" dir="auto">
+<html lang="zh-cn" dir="auto">
 
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,7 @@
 <link rel="mask-icon" href="https://jackchou00.icu/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="中文" href="https://jackchou00.icu/404.html">
+<link rel="alternate" hreflang="zh-cn" href="https://jackchou00.icu/404.html">
 <link rel="alternate" hreflang="en" href="https://jackchou00.icu/en/404.html">
 <noscript>
     <style>
@@ -84,7 +84,7 @@
   <meta property="og:site_name" content="🏡JacksBlog">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="JackChou 的博客，色彩科学，摄影，技术分享">
-  <meta property="og:locale" content="中文">
+  <meta property="og:locale" content="zh-cn">
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="404 Page not found">
@@ -141,6 +141,11 @@
             <li>
                 <a href="https://jackchou00.icu/posts/" title="文章 🌳">
                     <span>文章 🌳</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://jackchou00.icu/photos/" title="照片 📷">
+                    <span>照片 📷</span>
                 </a>
             </li>
             <li>
