--- a/en/404.html
+++ b/en/404.html
@@ -18,7 +18,7 @@
 <link rel="mask-icon" href="https://jackchou00.icu/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="中文" href="https://jackchou00.icu/404.html">
+<link rel="alternate" hreflang="zh-cn" href="https://jackchou00.icu/404.html">
 <link rel="alternate" hreflang="en" href="https://jackchou00.icu/en/404.html">
 <noscript>
     <style>
@@ -131,8 +131,8 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="https://jackchou00.icu/" title="中文"
-                            aria-label="中文">中文</a>
+                        <a href="https://jackchou00.icu/" title="zh-CN"
+                            aria-label="zh-CN">Zh-Cn</a>
                     </li>
                 </ul>
             </div>
