--- a/en/index.html
+++ b/en/index.html
@@ -20,7 +20,7 @@
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" type="application/rss+xml" href="https://jackchou00.icu/en/index.xml">
-<link rel="alternate" hreflang="中文" href="https://jackchou00.icu/">
+<link rel="alternate" hreflang="zh-cn" href="https://jackchou00.icu/">
 <link rel="alternate" hreflang="en" href="https://jackchou00.icu/en/">
 <noscript>
     <style>
@@ -146,8 +146,8 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="https://jackchou00.icu/" title="中文"
-                            aria-label="中文">中文</a>
+                        <a href="https://jackchou00.icu/" title="zh-CN"
+                            aria-label="zh-CN">Zh-Cn</a>
                     </li>
                 </ul>
             </div>
