optimize content Jackchou00/jacksblog@b95479424eb983a14825353ce8078f0ad6f472a6

--- a/photos/cat-250628/index.html
+++ b/photos/cat-250628/index.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="index, follow">
 <title>📷 马黛茶店里的猫猫 | 🏡JacksBlog</title>
 <meta name="keywords" content="Photos, Cats">
-<meta name="description" content="(9 Images)">
+<meta name="description" content="(9 Images) 一些猫猫能量">
 <meta name="author" content="">
 <link rel="canonical" href="https://jackchou00.icu/photos/cat-250628/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.e8837ce64944702606369ded1d43934e0fd20de57cd2c4db27374b5bac45e207.css" integrity="sha256-6IN85klEcCYGNp3tHUOTTg/SDeV80sTbJzdLW6xF4gc=" rel="preload stylesheet" as="style">
@@ -82,7 +82,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet"><meta property="og:url" content="https://jackchou00.icu/photos/cat-250628/">
   <meta property="og:site_name" content="🏡JacksBlog">
   <meta property="og:title" content="📷 马黛茶店里的猫猫">
-  <meta property="og:description" content="(9 Images)">
+  <meta property="og:description" content="(9 Images) 一些猫猫能量">
   <meta property="og:locale" content="zh-cn">
   <meta property="og:type" content="article">
     <meta property="article:section" content="photos">
@@ -92,7 +92,7 @@
     <meta property="article:tag" content="Cats">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="📷 马黛茶店里的猫猫">
-<meta name="twitter:description" content="(9 Images)">
+<meta name="twitter:description" content="(9 Images) 一些猫猫能量">
 
 
 <script type="application/ld+json">
@@ -121,7 +121,7 @@
   "@type": "BlogPosting",
   "headline": "📷 马黛茶店里的猫猫",
   "name": "📷 马黛茶店里的猫猫",
-  "description": "(9 Images)",
+  "description": "(9 Images) 一些猫猫能量",
   "keywords": [
     "Photos", "Cats"
   ],
