更新博客描述，统一使用“JacksBlog”名称以增强品牌一致性 Jackchou00/jacksblog@ad23a799720dbcace80523c42b45508fdf2032c7

--- a/draft/index.html
+++ b/draft/index.html
@@ -83,12 +83,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet"><meta property="og:url" content="https://jackchou00.icu/draft/">
   <meta property="og:site_name" content="🏡JacksBlog">
   <meta property="og:title" content="Drafts">
-  <meta property="og:description" content="JackChou 的博客，色彩科学，摄影，技术分享">
+  <meta property="og:description" content="JacksBlog: JackChou 的博客，色彩科学，摄影，技术分享">
   <meta property="og:locale" content="zh-cn">
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Drafts">
-<meta name="twitter:description" content="JackChou 的博客，色彩科学，摄影，技术分享">
+<meta name="twitter:description" content="JacksBlog: JackChou 的博客，色彩科学，摄影，技术分享">
 
 
 <script type="application/ld+json">
