--- a/photos/index.html
+++ b/photos/index.html
@@ -90,7 +90,7 @@
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="照片 📷">
-<meta name="twitter:description" content="JackChou 的博客，色彩科学，摄影，技术分享">
+<meta name="twitter:description" content="JacksBlog: JackChou 的博客，色彩科学，摄影，技术分享">
 
 
 <script type="application/ld+json">
