--- a/draft/hlg-understanding/index.html
+++ b/draft/hlg-understanding/index.html
@@ -291,6 +291,7 @@ $$<h2 id="与-sdr-的兼容性">与 SDR 的兼容性<a hidden class="anchor" ari
     
 <footer class="footer">
         <span>&copy; 2025 <a href="https://jackchou00.icu/">🏡JacksBlog</a></span> · 
+        my friends&rsquo; websites: <a href="https://zhxwu.com/">zhxwu</a> · 
 
     <span>
         Powered by
