--- a/en/about/index.html
+++ b/en/about/index.html
@@ -281,6 +281,7 @@ This blog was first created on June 29, 2023, originally intended as a portfolio
     
 <footer class="footer">
         <span>&copy; 2025 <a href="https://jackchou00.icu/en/">🏡JacksBlog</a></span> · 
+        my friends&rsquo; websites: <a href="https://zhxwu.com/">zhxwu</a> · 
 
     <span>
         Powered by
