--- a/en/404.html
+++ b/en/404.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="index, follow">
 <title>404 Page not found | 🏡JacksBlog</title>
 <meta name="keywords" content="">
-<meta name="description" content="JacksBlog: JackChou&#39;s Blog | Color Science, Photography, Tech Sharing">
+<meta name="description" content="JacksBlog: JackChou&#39;s Blog, Color Science, Photography, Tech Sharing">
 <meta name="author" content="">
 <link rel="canonical" href="https://jackchou00.icu/en/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.e8837ce64944702606369ded1d43934e0fd20de57cd2c4db27374b5bac45e207.css" integrity="sha256-6IN85klEcCYGNp3tHUOTTg/SDeV80sTbJzdLW6xF4gc=" rel="preload stylesheet" as="style">
@@ -83,12 +83,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet"><meta property="og:url" content="https://jackchou00.icu/en/404.html">
   <meta property="og:site_name" content="🏡JacksBlog">
   <meta property="og:title" content="404 Page not found">
-  <meta property="og:description" content="JacksBlog: JackChou&#39;s Blog | Color Science, Photography, Tech Sharing">
+  <meta property="og:description" content="JacksBlog: JackChou&#39;s Blog, Color Science, Photography, Tech Sharing">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="404 Page not found">
-<meta name="twitter:description" content="JacksBlog: JackChou&#39;s Blog | Color Science, Photography, Tech Sharing">
+<meta name="twitter:description" content="JacksBlog: JackChou&#39;s Blog, Color Science, Photography, Tech Sharing">
 
 </head>
 
@@ -131,16 +131,21 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="https://jackchou00.icu/" title="zh-CN"
-                            aria-label="zh-CN">Zh-Cn</a>
+                        <a href="https://jackchou00.icu/" title="中文"
+                            aria-label="中文">Zh-Cn</a>
                     </li>
                 </ul>
             </div>
         </div>
         <ul id="menu">
             <li>
-                <a href="https://jackchou00.icu/en/posts/" title="Articles 🌳">
-                    <span>Articles 🌳</span>
+                <a href="https://jackchou00.icu/en/posts/" title="Posts 🌳">
+                    <span>Posts 🌳</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://jackchou00.icu/en/photos/" title="Photos 📷">
+                    <span>Photos 📷</span>
                 </a>
             </li>
             <li>
