--- a/en/about/index.html
+++ b/en/about/index.html
@@ -190,16 +190,21 @@ This blog was first created on June 29, 2023, originally intended as a portfolio
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="https://jackchou00.icu/" title="zh-CN"
-                            aria-label="zh-CN">Zh-Cn</a>
+                        <a href="https://jackchou00.icu/" title="中文"
+                            aria-label="中文">Zh-Cn</a>
                     </li>
                 </ul>
             </div>
         </div>
         <ul id="menu">
             <li>
-                <a href="https://jackchou00.icu/en/posts/" title="Articles 🌳">
-                    <span>Articles 🌳</span>
+                <a href="https://jackchou00.icu/en/posts/" title="Posts 🌳">
+                    <span>Posts 🌳</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://jackchou00.icu/en/photos/" title="Photos 📷">
+                    <span>Photos 📷</span>
                 </a>
             </li>
             <li>
