Beta: 对 RSS 的支持 Jackchou00/jacksblog@8be3e64082df209d068fbef8c3599273b82134cf

--- a/draft/hlg-understanding/index.html
+++ b/draft/hlg-understanding/index.html
@@ -258,7 +258,7 @@ var _hmt = _hmt || [];
     {
       "@type": "ListItem",
       "position":  1 ,
-      "name": "Drafts",
+      "name": "草稿 📒",
       "item": "https://jackchou.top/draft/"
     }, 
     {
