--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ var _hmt = _hmt || [];
   "description": "JacksBlog: JackChou 的博客，色彩科学，摄影，技术分享",
   "logo": "https://jackchou.top/favicon.ico",
   "sameAs": [
-      "https://github.com/Jackchou00", "mailto:jackchou00@zju.edu.cn"
+      "https://github.com/Jackchou00", "mailto:jackchou00@zju.edu.cn", ""
   ]
 }
 </script>
@@ -361,6 +361,15 @@ var _hmt = _hmt || [];
     stroke-linecap="round" stroke-linejoin="round">
     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
     <polyline points="22,6 12,13 2,6"></polyline>
+</svg>
+    </a>
+    <a href="" target="_blank" rel="noopener noreferrer me"
+        title="Rss">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path d="M4 11a9 9 0 0 1 9 9" />
+    <path d="M4 4a16 16 0 0 1 16 16" />
+    <circle cx="5" cy="19" r="1" />
 </svg>
     </a>
 </div>
