Add: Search Function Beta Jackchou00/jacksblog@fe2e863cfb056c065c0ee1ec8c3b7071a1b24be4

--- a/about/index.html
+++ b/about/index.html
@@ -224,6 +224,11 @@
                     <span class="active">关于 😼</span>
                 </a>
             </li>
+            <li>
+                <a href="https://jackchou.top/search/" title="🔍">
+                    <span>🔍</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
