--- a/photos/hongkong-2025/index.html
+++ b/photos/hongkong-2025/index.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="index, follow">
 <title>香港 | 🏡JacksBlog</title>
 <meta name="keywords" content="Photos">
-<meta name="description" content="(4 Images) 在 CIC33 期间持续更新中">
+<meta name="description" content="(5 Images) 在 CIC33 期间持续更新中">
 <meta name="author" content="Jack">
 <link rel="canonical" href="https://jackchou.top/photos/hongkong-2025/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.e30af01949f15b214a659db89950589c44040efcfcdeec2087ad8629d77c216e.css" integrity="sha256-4wrwGUnxWyFKZZ24mVBYnEQEDvz83uwgh62GKdd8IW4=" rel="preload stylesheet" as="style">
@@ -83,7 +83,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Noto+Sans+SC:wght@100..900&family=Sen:wght@400..800&display=swap" rel="stylesheet"><meta property="og:url" content="https://jackchou.top/photos/hongkong-2025/">
   <meta property="og:site_name" content="🏡JacksBlog">
   <meta property="og:title" content="香港">
-  <meta property="og:description" content="(4 Images) 在 CIC33 期间持续更新中">
+  <meta property="og:description" content="(5 Images) 在 CIC33 期间持续更新中">
   <meta property="og:locale" content="zh-cn">
   <meta property="og:type" content="article">
     <meta property="article:section" content="photos">
@@ -94,7 +94,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="https://img.jackchou.top/jack-img/2025/08/81bb602c03f9704ee42e292468396187.webp">
 <meta name="twitter:title" content="香港">
-<meta name="twitter:description" content="(4 Images) 在 CIC33 期间持续更新中">
+<meta name="twitter:description" content="(5 Images) 在 CIC33 期间持续更新中">
 
 
 <script type="application/ld+json">
@@ -123,7 +123,7 @@
   "@type": "BlogPosting",
   "headline": "香港",
   "name": "香港",
-  "description": "(4 Images) 在 CIC33 期间持续更新中",
+  "description": "(5 Images) 在 CIC33 期间持续更新中",
   "keywords": [
     "Photos"
   ],
@@ -250,6 +250,7 @@
 <em>This one has up to 16x headroom</em></p>
 <p><img loading="lazy" src="https://img.jackchou.top/jack-img/2025/10/7856dc5487eed7331cbe59d926f9fa7e.avif">
 <em>This one has up to 16x headroom</em></p>
+<p><img loading="lazy" src="https://img.jackchou.top/jack-img/2025/11/7685b91c4a70f4373b1440fd40051e52.avif"></p>
 
 
   </div>
