新增文章：使用组装 DNG 实现新相机 RAW Day0 支持 Lightroom Jackchou00/jacksblog@9100e49753b7dd21dcdc3289226e112548f9e43c

--- a/en/photos/matchbox-h7s-lite-roaster/index.html
+++ b/en/photos/matchbox-h7s-lite-roaster/index.html
@@ -320,6 +320,11 @@
       <li><a href="https://jackchou.top/en/tags/coffee/">Coffee</a></li>
     </ul>
 <nav class="paginav">
+  <a class="prev" href="https://jackchou.top/en/posts/a7m5-manual-raw-to-dng/">
+    <span class="title">« Prev</span>
+    <br>
+    <span>Assembling DNG To Get Day0 Support For New Cameras</span>
+  </a>
   <a class="next" href="https://jackchou.top/en/posts/imagecodecs-avif/">
     <span class="title">Next »</span>
     <br>
