add hdr 5 Jackchou00/jacksblog@fb099a241246c1e9025d0c7b73ebe094395ea7f3

--- a/photos/hkg-photos/index.html
+++ b/photos/hkg-photos/index.html
@@ -262,6 +262,11 @@
       <li><a href="https://jackchou.top/tags/photos/">Photos</a></li>
     </ul>
 <nav class="paginav">
+  <a class="prev" href="https://jackchou.top/posts/iso-gainmap-alternate-headroom/">
+    <span class="title">« 上一篇</span>
+    <br>
+    <span>HDR 图像格式解析（五）：理解 Gainmap 中的 Headroom</span>
+  </a>
   <a class="next" href="https://jackchou.top/posts/a7m5-manual-raw-to-dng/">
     <span class="title">下一篇 »</span>
     <br>
